# neubit_v3

./: .gitattributes  .gitignore  README.md
backend/access/: Dockerfile  pyproject.toml
backend/access/app/: db.py  main.py
backend/access/app/access/: catalog.py  commands.py  crypto.py  doors.py  events.py  ingestion.py  models.py  router.py  schemas.py  service.py  writethrough.py
backend/access/app/connectors/: base.py  dds.py  factory.py
backend/access/migrations/: env.py
backend/access/migrations/versions/: 0001_access_baseline.py  0002_access_local_catalog.py
backend/ingest/: Dockerfile  pyproject.toml
backend/ingest/app/: db.py  main.py
backend/ingest/app/ingest/: __init__.py  bootstrap.py  matcher.py  models.py  router.py  schemas.py  security.py  service.py  transform.py
backend/ingest/migrations/: env.py
backend/ingest/migrations/versions/: 0001_ingest.py  0002_ingest_event_logs.py  0003_ingest_event_rules.py  0004_ingest_v2_parity.py  0005_ingest_webhook_slug.py
backend/kernel/: pyproject.toml
backend/kernel/kernel/: __init__.py  auth.py  config.py  db.py  errors.py  events.py  lifecycle.py  provisioning.py
backend/ops-agent/: Dockerfile  main.py  pyproject.toml  requirements.txt
backend/vision/: Dockerfile  README.md  pyproject.toml
backend/vision/app/: db.py  main.py
backend/vision/app/vms/: __init__.py  crypto.py  events.py  models.py  nvr_router.py  nvr_service.py  router.py  schemas.py  service.py
backend/vision/app/vms/anr/: __init__.py  consumer.py  ffmpeg.py  service.py
backend/vision/app/vms/audio/: __init__.py  router.py  schemas.py  service.py
backend/vision/app/vms/bookmarks/: router.py  schemas.py  service.py
backend/vision/app/vms/cameras/: __init__.py  router.py  schemas.py  service.py  snapshot_frame.py
backend/vision/app/vms/common/: __init__.py  core_audit.py  events.py  media_token.py  node_routing.py  nvr_client.py  raid_service.py  schemas.py  service_token.py  storage_backend.py  stream_policy.py
backend/vision/app/vms/dashboard/: __init__.py  router.py  schemas.py  service.py
backend/vision/app/vms/devicemgmt/: __init__.py  router.py  schemas.py  service.py
backend/vision/app/vms/drivers/: __init__.py  _http.py  base.py  cpplus.py  dahua_cpplus_decoder.py  decoder_base.py  decoder_factory.py  factory.py  hikvision.py  hikvision_decoder.py  lumina.py  onvif.py
backend/vision/app/vms/events/: __init__.py  normalize.py  router.py  schemas.py  service.py  supervisor.py
backend/vision/app/vms/evidence/: router.py  schemas.py  service.py
backend/vision/app/vms/export/: __init__.py  ffmpeg.py  router.py  schemas.py  service.py  signing.py  worker.py
backend/vision/app/vms/groups/: __init__.py  acl.py  router.py  schemas.py  service.py
backend/vision/app/vms/health/: __init__.py  router.py  schemas.py  service.py
backend/vision/app/vms/linkage/: __init__.py  actions.py  consumer.py  door_camera.py  router.py  schemas.py  service.py
backend/vision/app/vms/live/: __init__.py  router.py  schemas.py  service.py
backend/vision/app/vms/media_nodes/: __init__.py  router.py  schemas.py  service.py
backend/vision/app/vms/models/: __init__.py  _common.py  bookmark.py  camera.py  decoder.py  event.py  evidence.py  export.py  group.py  health.py  linkage.py  live.py  media_node.py  motion_search.py  nvr.py  onvif_server.py  pattern.py  ptz.py  recording.py  report.py  storage.py  videowall.py
backend/vision/app/vms/motion_search/: __init__.py  ffmpeg.py  router.py  schemas.py  service.py  worker.py
backend/vision/app/vms/nvr/: __init__.py  router.py  schemas.py  service.py
backend/vision/app/vms/onvif_server/: __init__.py  auth.py  discovery.py  router.py  schemas.py  service.py  soap.py  urls.py  xml_utils.py
backend/vision/app/vms/patterns/: __init__.py  router.py  schemas.py  service.py
backend/vision/app/vms/playback/: __init__.py  router.py  schemas.py  (+1 more)
backend/vision/migrations/: env.py
backend/vision/migrations/versions/: 0001_vision_baseline.py  0002_playback_sessions.py  0003_recordings.py  0004_storage.py  0005_patterns.py  0006_playback_window.py  0007_export_jobs.py  0008_vms_events.py  0009_linkage_rules.py  0010_signed_export_reports.py  0011_onvif_server.py  0012_video_wall.py  0013_video_decoder.py  0014_ptz.py  0015_bookmarks_evidence.py  0016_motion_search.py  0017_motion_zones.py  0018_audio.py  0019_stream_codec.py  0020_raid.py  0021_nvr_channels.py  0022_report_runs.py  0023_media_node_routing.py  0024_recording_media_node.py  0025_camera_group_active.py
backend/vision/tests/: conftest.py  fixtures.py  test_anr.py  test_audio.py  test_bookmarks_evidence.py  test_camera_acl.py  test_camera_node_assign.py  test_core_audit.py  test_cpplus_driver.py  test_dashboard.py  test_decoder.py  test_devicemgmt.py  test_events_service.py  test_export.py  test_export_signing.py  test_factory.py  test_health_sampler.py  test_hikvision_driver.py  test_linkage_service.py  test_linkage_walldisplay.py  test_live_service.py  test_lumina_driver.py  test_media_nodes.py  test_motion_search.py  test_motion_zones.py  test_node_failover.py  test_node_routing.py  test_nvr_footage.py  test_nvr_footage_service.py  test_onvif_discovery.py  test_onvif_driver.py  test_onvif_server.py  test_patterns_service.py  test_playback_service.py  test_ptz.py  test_recording_service.py  test_reports.py  test_reports_ops.py  test_snapshot.py  test_storage.py  (+2 more)
backend/workflow/: Dockerfile  README.md  pyproject.toml
backend/workflow/app/: db.py  main.py  worker.py
backend/workflow/app/workflow/: __init__.py  correlation.py  events.py  models.py  notify_consumer.py  pdf.py  push_tokens.py  router.py  schemas.py  service.py  shared.py  tasks.py  templating.py
backend/workflow/migrations/: env.py
backend/workflow/migrations/versions/: 0001_workflow.py  0002_notification_backoff.py  0003_alert_formats.py  0004_template_provider_ref.py  0005_device_tokens.py
backend/workflow/tests/: test_db_per_tenant.py  test_device_tokens.py  test_instances_filters.py  test_offboard.py  test_push.py  test_shared.py
(+865 files in other folders)
