[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "neubit-workflow"
version = "0.1.0"
description = "Workflow service — SOP / automation engine. Control-plane on the edge core; cross-domain via NATS; scheduled/async work via Celery."
requires-python = ">=3.11"

dependencies = [
    "kernel",          # shared kernel (installed as a path dep — see [tool.uv.sources])
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "celery>=5.3",            # async task + beat scheduler
    "redis>=5.0",            # Celery broker/result backend
    "nats-py>=2.6",          # correlation consumer (JetStream durable subscribe)
    "aiosmtplib>=3.0",       # EmailConnector (SMTP delivery)
    "httpx>=0.27",           # WebhookConnector (HTTP POST delivery)
    "jinja2>=3.1",           # sandboxed notification-template rendering
    "reportlab>=4.0",        # incident PDF report export
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.5"]
# Mobile-push (PushConnector) provider SDKs — LAZY-imported in connectors/push.py so
# the worker boots + degrades gracefully when absent. Install the `push` extra to
# enable real delivery:
#   * google-auth  — mint the FCM HTTP v1 OAuth2 bearer from the service account.
#   * pyjwt + cryptography — sign the APNs ES256 auth JWT from the .p8 key.
#   * httpx[http2] (h2) — APNs requires HTTP/2 (already have httpx for FCM/webhook).
push = ["google-auth>=2.28", "pyjwt>=2.8", "cryptography>=42.0", "httpx[http2]>=0.27"]

[tool.uv.sources]
kernel = { path = "/opt/kernel", editable = true }

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
